--- a/FIT5032_Assignment/Views/Schedules/Details.cshtml
+++ b/FIT5032_Assignment/Views/Schedules/Details.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Appointment.ScanPart)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Appointment.ScanPart)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Clinic.ClinicName)
         </dt>
 
