--- a/FIT5032_Assignment/Views/Appointments/Index.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Index.cshtml
@@ -19,22 +19,10 @@
             @Html.DisplayNameFor(model => model.Feedback.Comment)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PatientName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Birthday)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.Patient.UserId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ScanPart)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Note)
@@ -43,10 +31,10 @@
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status)
+            @Html.DisplayNameFor(model => model.IsConfirmed)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserID)
+            @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th></th>
     </tr>
@@ -60,22 +48,10 @@
             @Html.DisplayFor(modelItem => item.Feedback.Comment)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.PatientName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Birthday)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
+            @Html.DisplayFor(modelItem => item.Patient.UserId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ScanPart)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Gender)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Note)
@@ -84,10 +60,10 @@
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Status)
+            @Html.DisplayFor(modelItem => item.IsConfirmed)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UserID)
+            @Html.DisplayFor(modelItem => item.UserId)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.AppointmentId }) |
