--- a/FIT5032_Assignment/Views/Patients/Index.cshtml
+++ b/FIT5032_Assignment/Views/Patients/Index.cshtml
@@ -15,6 +15,21 @@
         <th>
             @Html.DisplayNameFor(model => model.UserId)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PatientName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Birthday)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Gender)
+        </th>
         <th></th>
     </tr>
 
@@ -22,6 +37,21 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.UserId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PatientName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Birthday)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumber)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Gender)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
