--- a/FIT5032_Assignment/Views/Schedules/Edit.cshtml
+++ b/FIT5032_Assignment/Views/Schedules/Edit.cshtml
@@ -45,6 +45,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.AppointmentId, "AppointmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("AppointmentId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AppointmentId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
