FIX BUG FOR AFTER REGESTER

--- a/FIT5032_Assignment/Views/FeedbackAndRatings/Details.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Appointment.PatientName)
+            @Html.DisplayNameFor(model => model.Appointment.ScanPart)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Appointment.PatientName)
+            @Html.DisplayFor(model => model.Appointment.ScanPart)
         </dd>
 
         <dt>
