--- a/FIT5032_Assignment/Views/FeedbackAndRatings/Index.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Appointment.PatientName)
+            @Html.DisplayNameFor(model => model.Appointment.ScanPart)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Rating)
@@ -27,7 +27,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Appointment.PatientName)
+            @Html.DisplayFor(modelItem => item.Appointment.ScanPart)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Rating)
