--- a/FIT5032_Assignment/Views/FeedbackAndRatings/Create.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings/Create.cshtml
@@ -8,30 +8,27 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>FeedbackAndRating</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentId, "AppointmentId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AppointmentId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AppointmentId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10" id="rating-star">
+            <span class="star" data-rating="1">&#9734;</span>
+            <span class="star" data-rating="2">&#9734;</span>
+            <span class="star" data-rating="3">&#9734;</span>
+            <span class="star" data-rating="4">&#9734;</span>
+            <span class="star" data-rating="5">&#9734;</span>
+            @Html.HiddenFor(model => model.Rating, new { id = "ratingValue" })
+            @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
         </div>
+    </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -55,4 +52,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Styles.Render("~/Content/css")
 }
