--- a/FIT5032_Assignment/Views/Shared/_Layout.cshtml
+++ b/FIT5032_Assignment/Views/Shared/_Layout.cshtml
@@ -18,36 +18,36 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    @if (User.Identity.IsAuthenticated && (User.IsInRole("Patient") || User.IsInRole("Staff")))
-                    {
-                        // These links will not be shown for users logged in as Patient or Staff
-                    }
-                    else
-                    {
-                        <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
 
-                    @if (User.Identity.IsAuthenticated && User.IsInRole("Patient"))
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+
+                    @if (User.Identity.IsAuthenticated)
                     {
+
+
+
                         <li>@Html.ActionLink("Patient", "Index", "Patients")</li>
                         <li>@Html.ActionLink("Appointment", "Index", "Appointments", new { area = "" }, new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Feedback", "Index", "FeedbackAndRatings", new { area = "" }, new { @class = "nav-link" })</li>
 
+
+
+
+
+                        if (User.IsInRole("Staff"))
+                        {
+                            <li>@Html.ActionLink("Clinic", "Index", "Clinics", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li>@Html.ActionLink("Schedule", "Index", "Schedules", new { area = "" }, new { @class = "nav-link" })</li>
+                        }
                     }
 
 
 
-                    @if (User.Identity.IsAuthenticated && User.IsInRole("Staff"))
-                    {
-                        <li>@Html.ActionLink("Clinic", "Index", "Clinics", new { area = "" }, new { @class = "nav-link" })</li>
-
-                        <li>@Html.ActionLink("Schedule", "Index", "Schedules", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
 
                 </ul>
-                 @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </nav>
