--- a/FIT5032_Assignment/Views/FeedbackAndRatings1/Edit.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings1/Edit.cshtml
@@ -1,51 +1,44 @@
 ﻿@model FIT5032_Assignment.Models.Entites.FeedbackAndRating
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>FeedbackAndRating</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.AppointmentId)
 
-    <div class="row m-0 p-0" >
         <div class="form-group">
             @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10" id="rating-star">
-                <span class="star" data-rating="1">&#9734;</span>
-                <span class="star" data-rating="2">&#9734;</span>
-                <span class="star" data-rating="3">&#9734;</span>
-                <span class="star" data-rating="4">&#9734;</span>
-                <span class="star" data-rating="5">&#9734;</span>
-                @Html.HiddenFor(model => model.Rating, new { id = "ratingValue" })
-                <span id="ratingDisplay" class="ml-2"></span>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group ">
+        <div class="form-group">
             @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-12 col-md-6">
-                @Html.TextAreaFor(model => model.Comment, new { @class = "form-control textarea-width", @rows = "5", @maxlength = "500", @style = "resize: none;" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
-    </div>
     </div>
 }
 
@@ -55,8 +48,4 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/CustomerJsCss/feedback.js")
-    @Styles.Render("~/CustomerJsCss/css.css")
-
 }
