init booking form

--- a/FIT5032_Assignment/Views/Shared/_Layout.cshtml
+++ b/FIT5032_Assignment/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
 
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Patient", "Index", "Patients")</li>
-                        <li>@Html.ActionLink("Appointment", "Index", "Appointments", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Patient", "Index", "Patients", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Appointment", "Create", "Appointments", new { area = "" }, new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Feedback", "Index", "FeedbackAndRatings", new { area = "" }, new { @class = "nav-link" })</li>
 
 
