--- a/FIT5032_Assignment/Views/Schedules/Delete.cshtml
+++ b/FIT5032_Assignment/Views/Schedules/Delete.cshtml
@@ -29,11 +29,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TimeSlot)
+            @Html.DisplayNameFor(model => model.StartTime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TimeSlot)
+            @Html.DisplayFor(model => model.StartTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndTime)
         </dd>
 
         <dt>
