integrate time into appointment

--- a/FIT5032_Assignment/Views/Appointments/Details.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Details.cshtml
@@ -68,6 +68,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.AppointmentDateTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AppointmentDateTime)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
 
