--- a/FIT5032_Assignment/Views/Appointments/Delete.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Delete.cshtml
@@ -69,6 +69,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.AppointmentDateTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AppointmentDateTime)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
 
