--- a/FIT5032_Assignment/Views/Appointments/Index.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Index.cshtml
@@ -34,6 +34,9 @@
             @Html.DisplayNameFor(model => model.IsConfirmed)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.AppointmentDateTime)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th></th>
@@ -61,6 +64,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsConfirmed)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AppointmentDateTime)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserId)
