--- a/FIT5032_Assignment/Views/Appointments/Details.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Details.cshtml
@@ -28,14 +28,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Patient.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Patient.UserId)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.ScanPart)
         </dt>
 
@@ -60,6 +52,54 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Birthday)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Birthday)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Gender)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Gender)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.IsConfirmed)
         </dt>
 
@@ -68,11 +108,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AppointmentDateTime)
+            @Html.DisplayNameFor(model => model.AppointmentDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AppointmentDateTime)
+            @Html.DisplayFor(model => model.AppointmentDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StartTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndTime)
         </dd>
 
         <dt>
