--- a/FIT5032_Assignment/Views/Appointments/Index.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Index.cshtml
@@ -19,9 +19,6 @@
             @Html.DisplayNameFor(model => model.Feedback.Comment)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Patient.UserId)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.ScanPart)
         </th>
         <th>
@@ -31,10 +28,34 @@
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Birthday)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Gender)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.IsConfirmed)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AppointmentDateTime)
+            @Html.DisplayNameFor(model => model.AppointmentDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StartTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EndTime)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UserId)
@@ -51,9 +72,6 @@
             @Html.DisplayFor(modelItem => item.Feedback.Comment)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Patient.UserId)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.ScanPart)
         </td>
         <td>
@@ -63,10 +81,34 @@
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Birthday)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumber)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Gender)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.IsConfirmed)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AppointmentDateTime)
+            @Html.DisplayFor(modelItem => item.AppointmentDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StartTime)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EndTime)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserId)
